Add flavor text to images.

--- a/index.html
+++ b/index.html
@@ -81,25 +81,9 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="row">
-                    <div class="col-sm-6 col-md-5">
-                      <div class="about-img">
-                        <!--<img src="assets/img/Kessler-Anna-1.jpg" class="img-fluid rounded b-shadow-a" alt="">--> 
-                      </div>
-                    </div>
-                    <!--
-                    <div class="col-sm-6 col-md-7">
-                      <div class="about-info">
-                        <p><span class="title-s">Name: </span> <span>Anna Kessler</span></p>
-                        <p><span class="title-s">Profile: </span> <span>Software Web Developer</span></p>
-                        <p><span class="title-s">Email: </span> <span>arkessler@uwalumni.com</span></p>
-                        <p><span class="title-s">Phone: </span> <span>(608) 228-9081</span></p>
-                      </div>
-                    </div>
-                  </div>
-                  -->
                   <div class="pets">
-                    <img src="assets/img/bodhi.png" class="img-fluid rounded b-shadow-a" alt="">
-                    <img src="assets/img/baxter.png" class="img-fluid rounded b-shadow-a" alt="">
+                    <img src="assets/img/bodhi.png" class="img-fluid rounded b-shadow-a" alt="Bodhi: black lab sitting in a flower field.">
+                    <img src="assets/img/baxter.png" class="img-fluid rounded b-shadow-a" alt="Baxter: grey poodle sitting on a dock.">
                   </div>
                   
                 <div class="col-md-6" id="move-me">
