Move dogs to the left.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="hero-title mb-4">Anna Kessler</h1>
           <p class="hero-subtitle"><span class="typed" data-typed-items="HTML, CSS, SQL, Java, JavaScript"></span></p>
-          <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
     </div>
@@ -79,9 +78,7 @@
           <div class="col-sm-12">
             <div class="box-shadow-full">
               <div class="row">
-                <div class="col-md-6">
-                  <div class="row">
-                  <div class="pets">
+                  <div class="pets col-md-6">
                     <img src="assets/img/bodhi.png" class="img-fluid rounded b-shadow-a" alt="Bodhi: black lab sitting in a flower field.">
                     <img src="assets/img/baxter.png" class="img-fluid rounded b-shadow-a" alt="Baxter: grey poodle sitting on a dock.">
                   </div>
@@ -113,7 +110,6 @@
                     </p>
                   </div>
                 </div>
-              </div>
             </div>
           </div>
         </div>
