--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/community-garden-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a link="assets/img/community-garden-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
                   <img src="assets/img/community-garden-1.png" alt="" class="img-fluid">
                 </div>
@@ -264,7 +264,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/crystal-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a link="assets/img/crystal-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
                   <img src="assets/img/crystal-1.png" alt="" class="img-fluid">
                 </div>
