--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <div class="col-sm-12">
             <div class="box-shadow-full">
               <div class="row">
-                  <div class="pets col-md-6">
+                  <div class="pets">
                     <img src="assets/img/bodhi.png" class="img-fluid rounded b-shadow-a" alt="Bodhi: black lab sitting in a flower field.">
                     <img src="assets/img/baxter.png" class="img-fluid rounded b-shadow-a" alt="Baxter: grey poodle sitting on a dock.">
                   </div>
@@ -240,7 +240,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="work-box">
-              <a link="assets/img/community-garden-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/community-garden-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
                   <img src="assets/img/community-garden-1.png" alt="" class="img-fluid">
                 </div>
@@ -264,7 +264,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a link="assets/img/crystal-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/crystal-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
                   <img src="assets/img/crystal-1.png" alt="" class="img-fluid">
                 </div>
