--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <div class="col-sm-12">
             <div class="box-shadow-full">
               <div class="row">
-                  <div class="pets">
+                  <div class="pets col-md-6">
                     <img src="assets/img/bodhi.png" class="img-fluid rounded b-shadow-a" alt="Bodhi: black lab sitting in a flower field.">
                     <img src="assets/img/baxter.png" class="img-fluid rounded b-shadow-a" alt="Baxter: grey poodle sitting on a dock.">
                   </div>
@@ -169,7 +169,7 @@
               <div class="service-content">
                 <h2 class="s-title">Software Development</h2>
                 <p class="s-description text-center">
-                  Version control, 
+                  Version Control,
                 </p>
               </div>
             </div>
@@ -180,11 +180,9 @@
                 <span class="ico-circle"><i class="bi bi-binoculars"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Responsive Design</h2>
+                <h2 class="s-title">Cloud Development</h2>
                 <p class="s-description text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
-                  tempora perferendis eum non provident.
+                  AWS: S3, EC2
                 </p>
               </div>
             </div>
@@ -197,9 +195,7 @@
               <div class="service-content">
                 <h2 class="s-title">Test Driven Development</h2>
                 <p class="s-description text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
-                  tempora perferendis eum non provident.
+
                 </p>
               </div>
             </div>
@@ -210,7 +206,7 @@
                 <span class="ico-circle"><i class="bi bi-calendar4-week"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Agile</h2>
+                <h2 class="s-title">Agile Practices</h2>
                 <p class="s-description text-center">
                   User Stories, Sprint Planning, Retrospectives, Kanban Boards, Burndown Charts, Iterative Development
                 </p>
@@ -336,7 +332,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/work-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/poetry.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
                   <img src="assets/img/poetry.png" alt="" class="img-fluid">
                 </div>
