Updated icon links

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/foxicon.png" rel="icon">
+  <link href="assets/img/foxicon.png" rel="icon">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -141,9 +141,7 @@
               <div class="service-content">
                 <h2 class="s-title">Web Design</h2>
                 <p class="s-description text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
-                  tempora perferendis eum non provident.
+                  Wireframes, Typography, Color Theory, User Interface Design, Design Tools and Figma
                 </p>
               </div>
             </div>
@@ -156,7 +154,7 @@
               <div class="service-content">
                 <h2 class="s-title">Web Development</h2>
                 <p class="s-description text-center">
-                  Accessibility, 
+                  Accessibility, DOM manipulation, Web Standards, Web Hosting,
                 </p>
               </div>
             </div>
@@ -169,7 +167,7 @@
               <div class="service-content">
                 <h2 class="s-title">Software Development</h2>
                 <p class="s-description text-center">
-                  Version Control,
+                  Version Control, Debugging, Database Management, Something Else
                 </p>
               </div>
             </div>
@@ -182,7 +180,8 @@
               <div class="service-content">
                 <h2 class="s-title">Cloud Development</h2>
                 <p class="s-description text-center">
-                  AWS: S3, EC2
+                  Amazon Web Services: S3, EC2, IAM, Textract,
+                  Something Else
                 </p>
               </div>
             </div>
@@ -195,7 +194,7 @@
               <div class="service-content">
                 <h2 class="s-title">Test Driven Development</h2>
                 <p class="s-description text-center">
-
+                  Unit Testing, Testing Frameworks, Acceptance Testing, Code Coverage, Refactoring
                 </p>
               </div>
             </div>
@@ -364,7 +363,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Coming soon</h2>
+                    <h2 class="w-title">WI Tax Calculator</h2>
                     <div class="w-more">
                       <span class="w-ctegory">JavaScript</span> / <span class="w-date">2024</span>
                     </div>
