Updated Experience section

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
               <div class="service-content">
                 <h2 class="s-title">Web Development</h2>
                 <p class="s-description text-center">
-                  Accessibility, DOM manipulation, Web Standards, Web Hosting,
+                  Accessibility, Dynamic Web Programming, Web Standards, Web Hosting
                 </p>
               </div>
             </div>
@@ -167,7 +167,7 @@
               <div class="service-content">
                 <h2 class="s-title">Software Development</h2>
                 <p class="s-description text-center">
-                  Version Control, Debugging, Database Management, Something Else
+                  Version Control, Debugging, Database Management, Object Oriented Programming
                 </p>
               </div>
             </div>
@@ -180,8 +180,7 @@
               <div class="service-content">
                 <h2 class="s-title">Cloud Development</h2>
                 <p class="s-description text-center">
-                  Amazon Web Services: S3, EC2, IAM, Textract,
-                  Something Else
+                  Amazon Web Services: S3, EC2, IAM, Textract, Lambda, DynamoDB
                 </p>
               </div>
             </div>
