--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Diamond Poems</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Java software development</span> / <span class="w-date">In progress!</span>
+                      <span class="w-ctegory">Java Software Development</span> / <span class="w-date">In progress!</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -397,7 +397,7 @@
                       </h5>
                     </div>
                     <div>
-                      <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                      <form action="mailto:arkessler@uwalumni.com" method="post" role="form" class="php-email-form">
                         <div class="row">
                           <div class="col-md-12 mb-3">
                             <div class="form-group">
