Contact form php

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/community-garden-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/community-garden-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" aria-label="Garden Gallery">
                 <div class="work-img">
                   <img src="assets/img/community-garden-1.png" alt="" class="img-fluid">
                 </div>
@@ -249,7 +249,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="https://github.com/redfoxanna/web-dev"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="https://github.com/redfoxanna/web-dev" aria-label="Visit Github"> <span class="bi bi-plus-circle" ></span></a>
                     </div>
                   </div>
                 </div>
@@ -258,7 +258,7 @@
           </div>
           <div class="col-md-4">
             <div class="work-box">
-              <a href="assets/img/crystal-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="assets/img/crystal-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" aria-label="crystal-palace homepage">
                 <div class="work-img">
                   <img src="assets/img/crystal-1.png" alt="" class="img-fluid">
                 </div>
@@ -273,7 +273,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="https://github.com/redfoxanna/crystal-palace"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="https://github.com/redfoxanna/crystal-palace" aria-label="view the code"><span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -369,7 +369,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="https://github.com/redfoxanna/wi-tax-calculator"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="https://github.com/redfoxanna/wi-tax-calculator"><span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
@@ -482,7 +482,7 @@
   </footer><!-- End  Footer -->
 
   <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" aria-label="back to top" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
