--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
               <div class="service-content">
                 <h2 class="s-title">Cloud Development</h2>
                 <p class="s-description text-center">
-                  Amazon Web Services: S3, EC2, IAM, Textract, Lambda, DynamoDB
+                  Amazon Web Services: S3, EC2, IAM, Textract, Lambda, Elastic Beanstalk, DynamoDB
                 </p>
               </div>
             </div>
@@ -397,7 +397,7 @@
                       </h5>
                     </div>
                     <div>
-                      <form action="mailto:arkessler@uwalumni.com" method="post" role="form" class="php-email-form">
+                      <form action="contact.php" method="post" role="form" class="php-email-form">
                         <div class="row">
                           <div class="col-md-12 mb-3">
                             <div class="form-group">
